# facedemo

./: CMakeLists.txt  README.md
facecli/: CMakeLists.txt  facecli.cpp  facecli.h  main.cpp
facegui/: CMakeLists.txt  facegui.cpp  facegui.h  filedialog.cpp  filedialog.h  graphicsview.cpp  graphicsview.h  main.cpp
facelib/: CMakeLists.txt  faceobject.cpp  nodedata.cpp  nodeitem.cpp  nodemodel.cpp  worker.cpp
facelib/include/facelib/: faceobject.h  facexport.h  nodedata.h  nodeitem.h  nodemodel.h  worker.h
